--- a/counter.html
+++ b/counter.html
@@ -15,7 +15,7 @@
           <button class="border-gray-500 bg-gray-500 py-1.5 px-4 rounded-md shadow-md" type="submit">
             Decrement Button
           </button>
-          <h2>1</h2>
+          <h2>{{ counter }}</h2>
           <button class="border-gray-500 bg-gray-500 py-1.5 px-4 rounded-md shadow-md" type="submit">
             Increment Button
           </button>
