--- a/counter.html
+++ b/counter.html
@@ -7,8 +7,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="app" class="bg-gray-800 min-h-screen flex justify-center items-start">
-      <div class="bg-gray-600 px-4 py-4 shadow-lg rounded-md my-6 w-1/2 text-white">
+    <div id="app" class="bg-gray-800 min-h-screen flex justify-center items-start px-4">
+      <div class="bg-gray-600 px-4 py-4 shadow-lg rounded-md my-6 w-full lg:w-1/2 text-white">
         <h1 class="text-lg leading-7 tracking-wide mb-2">Vue JS Counter</h1>
         <div class="w-full border border-white mb-4"></div>
         <div class="flex justify-between items-center">
@@ -22,7 +22,5 @@
         </div>
       </div>
     </div>
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="index.js"></script>
   </body>
 </html>
